--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,16 +1,13 @@
-@import './variables.scss';
 @import "./resets.css";
 
-// 全局样式
 body {
   margin: 0;
   padding: 0;
   font-family: 'Inter', 'Roboto', sans-serif;
-  color: $text-color;
-  background-color: $bg-color;
+  color: #333;
+  background-color: #fafafa;
 }
 
-// 容器样式
 .container {
   width: 100%;
   max-width: 1440px;
